feat: fix utf-8 file, se añade funcion del scheduled